# dofi

./: Cargo.toml  README.md
share/completions/: fish
src/: args.rs  main.rs  profile.rs  rule.rs
