[package]
name = "dofi"
version = "0.1.5"
edition = "2018"
authors = ["Akatsuki Rui <akiirui@outlook.com>"]
description = "A simple dotfile manager"
license = "MIT"
readme = "README.md"
keywords = ["dotfile"]
documentation = "https://docs.rs/dofi"
homepage = "https://github.com/akiirui/dofi/"
repository = "https://github.com/akiirui/dofi/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
structopt = "0.3.23"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
dirs = "4.0.0"

[profile.release]
lto = true
