[package]
name = "dofi"
version = "0.2.3"
edition = "2021"
authors = ["Akatsuki Rui <akiirui@outlook.com>"]
description = "A simple dotfile manager"
license = "MIT"
readme = "README.md"
keywords = ["dotfile"]
documentation = "https://docs.rs/dofi"
homepage = "https://github.com/akiirui/dofi/"
repository = "https://github.com/akiirui/dofi/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
